Small refactor and new test
